--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.12"
 pandas = "^2.1.4"
 bs4 = "^0.0.1"
+html5lib = "^1.1"
+mysql-connector-python = "^8.2.0"
+isort = "^5.13.2"
 
 
 [build-system]
