--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ bs4 = "^0.0.1"
 html5lib = "^1.1"
 mysql-connector-python = "^8.2.0"
 isort = "^5.13.2"
+requests = "^2.31.0"
+redis = "^5.0.1"
+requests-oauthlib = "^1.3.1"
+flask = "^3.0.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
